# shiqi

./: .gitignore  LICENSE  README.md  pyproject.toml
ontology/: dangdang-books.ttl
queries/: examples.rq
scripts/: crawl_dangdang.py  export_nt.py  import_graphdb.py
src/dangdang_kgqa/: __init__.py  api.py  config.py  graphdb.py  models.py  qa.py  rdf_exporter.py  xml_store.py
src/dangdang_kgqa/crawler/: __init__.py  client.py  parsers.py  pipeline.py
tests/: test_api.py  test_parsers.py  test_pipeline.py  test_qa.py  test_xml_rdf.py
tests/fixtures/: category_sample.html  product_sample.html
web/: app.js  index.html  styles.css
