[project]
name = "dangdang-kgqa"
version = "0.1.0"
description = "Dangdang novel knowledge graph QA system using Python and GraphDB."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "lxml>=5.2.0",
  "pydantic>=2.8.0",
  "rdflib>=7.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

